--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -7,9 +7,9 @@
     <div id="divHeader">{{session_name}}</div>
    <div class="row no-gutters">
         <div class="col-xl-6 col-12 pr-4" align="right">
-            <div id="play-video-container" style="max-width:854px;max-height:720px;width:100%" class="d-flex align-items-center justify-content-center">
+            <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                 <div id="player-waiting" style="height:480px" class="align-items-center d-flex"><h1>Waiting for Camera</h1></div>
-                <video id="player-video" autoplay playsinline muted controls style="display:none"></video>
+                <video id="player-video" autoplay playsinline muted controls class="live-video" style="display:none"></video>
                 
             </div><div id="divAthlete" align="center"></div>
             
