--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -24,9 +24,9 @@
             <video id="video-playback"  style="max-width:854px;max-height:720px;display:none;width:100%" muted controls webkit-playsinline>
 		        Your browser does not support the video tag.
 	        </video>
-            <div id="play-video-container" style="max-width:854px;max-height:720px;width:100%" class="d-flex align-items-center justify-content-center">
+            <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                 <div id="player-waiting" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                <video id="player-video" autoplay playsinline muted controls style="display:none"></video>
+                <video id="player-video" class="live-video" autoplay playsinline muted controls style="display:none"></video>
             </div>
                     
             <div id="divSpeedSlider" align="right" style="width:100%;height:33px;display:none">
