--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -11,9 +11,9 @@
             <td>
                 <!--<div id="divTwitchPlayer" style="width:854px;height:480px"></div>-->
                  
-                <div id="play-video-container" style="width:854px;min-height:480px;max-height:720px" class="d-flex align-items-center justify-content-center">
+                <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
                             <div id="player-waiting"><h1>Waiting for Camera</h1></div>
-                            <video id="player-video" autoplay playsinline muted controls style="display:none"></video>
+                            <video id="player-video" autoplay playsinline muted controls class="live-video" style="display:none"></video>
                         </div>
             </td>
             <td valign="top">
