--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -24,7 +24,7 @@
                     </button>
                 </div>
                 
-                <div class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25 text-truncate"><h4 id="title">{{title}}</h4></div>
+                <div class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25"><h4 id="title">{{title}}</h4></div>
                 
                 <div class="navbar-collapse collapse justify-content-end order-2 w-50 pull-right" id="collapsingNavbar">
                     
