--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 <div  align="center">
     {% include "app/event_select.html" %}  
-    <div id="divHeader">{{session_name}}</div>
+    <div id="divHeader"><h4>{{session.full_name}}</h4></div>
    <div class="row no-gutters">
         <div class="col-xl-6 col-12 pr-4" align="right">
             <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
