--- a/STSEval/streaming/templates/streaming/camera.html
+++ b/STSEval/streaming/templates/streaming/camera.html
@@ -44,7 +44,7 @@
         <div class="row justify-content-center">
         <div class="col-md-8 col-sm-10">
             <div id="publish-video-container">
-            <video id="publisher-video" class="live-video" autoplay playsinline muted controls></video>
+            <video id="publisher-video" autoplay playsinline muted controls></video>
             <div id="video-live-indicator">
                 <span id="video-live-indicator-live" class="badge badge-pill badge-danger" style="display:none;">LIVE</span>
                 <span id="video-live-indicator-error" class="badge badge-pill badge-warning" style="display:none;">ERROR</span>
