--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -4,16 +4,30 @@
 {% load staticfiles %}
 <div  align="center">
     {% include "app/event_select.html" %}  
-    <div id="divHeader">{{session_name}}</div>
+    <div id="divHeader"><h4>{{session.full_name}}</h4></div>
    <div class="row no-gutters">
-        <div class="col-xl-6 col-12" align="right">
-            <div id="play-video-container" style="max-width:854px;max-height:720px;width:100%" class="d-flex align-items-center justify-content-center">
-                <div id="player-waiting" style="height:480px;display:none" class="align-items-center"><h1>Waiting for Camera</h1></div>
-                <video id="player-video" class="video-js vjs-16-9" disablePictureInPicture autoplay muted></video>
+        <div class="col-12" align="center">
+            <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
+                <div id="player-waiting" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
+                <video id="player-video" class="live-video video-js vjs-16-9" style="display:none" disablePictureInPicture autoplay muted></video>
             </div>
+            <div id="divAthlete" align="center"></div>
         </div>
-        <div class="col-xl-6 col-12" align="left">
-        </div>
+       <!--<div class="col-xl-6 col-12" align="left"> </div>-->
+       <br/>
+       <br/>
+       <div class="col-12 pt-4">
+           <div class="d-flex align-items-center justify-content-center">
+               {% for sponsor in sponsors %}
+                   <div style="max-width:400px" class="pr-4">
+                       <a href="{{sponsor.url}}" target="_blank"><img src="{{sponsor.image.url}}" class="sponsor-image" title="{{sponsor.name}}" /></a>
+                   </div>
+            
+               {% endfor %}
+            </div>
+       </div>
+        
+       
    </div>
  </div>
 {% endblock %}
@@ -28,15 +42,34 @@
     var SessionName = "{{session}}";
     var token = "{{ csrf_token }}";
     var VidJSPlayer;
+    var AthleteNames = new Array();
+    {% for athlete in athletes %}
+        AthleteNames[{{athlete.id}}] = "{{athlete}}";
+    {% endfor %}
 
 </script>
 <script type="text/javascript">
+    var CurrentAthlete = -1;
     var db = firebase.firestore();
     var docRef = db.collection("sessions").doc(Session).collection("event_managers").doc(ev);
 
     docRef.onSnapshot(function (doc) {
-        CheckStream(doc);
+        if (doc.data() != undefined) {
+            if (CurrentAthlete != doc.data().athlete_id) {
+                $("#divAthlete").html(AthleteNames[doc.data().athlete_id]);
+                CheckStream(doc);
+            }
+        }
+        else {
+             $("#player-video").hide();
+            $("#player-waiting").css("display", "flex");
+        }
+
     });
+
+    function SwapEvent(evIn) {
+        window.location = "/spectate/" + Session + "/" + evIn;
+    }
 
 </script>
 {% endblock %}
