spectate dual display

--- a/STSEval/app/templates/app/select_session.html
+++ b/STSEval/app/templates/app/select_session.html
@@ -48,7 +48,7 @@
 
     function btnViewClick() {
         if (SelectedSession != -1) {
-            window.location = "/spectate/" + SelectedSession;
+            window.location = "/spectate/" + SelectedSession + "/single/";
         }
     }
 
