--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -46,9 +46,17 @@
                                             <a class="dropdown-item" onclick="EventChanged('HB')">HB</a>
                                         </div>
                                     </li>-->
+                                    {% if display_type %}
+                                        {% if display_type == 'single' %}
+                                            <li class="nav-item align-self-center"><a class="nav-link" href="/spectate/{{session.id}}/dual/{{event_name}}">dual display</a></li>
+                                        {% else %}
+                                            <li class="nav-item align-self-center"><a class="nav-link" href="/spectate/{{session.id}}/single/{{event_name}}">single display</a></li>
+                                        {% endif %}
+                                    {% endif %}
                                     {% if scoreboard %}
                                         <li class="nav-item align-self-center"><a target="_blank" class="nav-link" href="/scoreboard/{{event_name}}">scoreboard</a></li>
                                     {% endif %}
+                                    
                                     <li class="nav-item align-self-center"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">logout</a></li>
                                 </ul>
                             </form>
