scoreboard height fix

--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -21,7 +21,7 @@
                 </select>
 
             </div>-->
-            <video id="video-playback"  style="max-width:854px;max-height:720px;display:none;width:100%" muted controls webkit-playsinline>
+            <video id="video-playback"  style="max-width:854px;max-height:720px;display:none;width:100%;min-height:480px" muted controls webkit-playsinline>
 		        Your browser does not support the video tag.
 	        </video>
             <div id="play-video-container" class="live-container d-flex align-items-center justify-content-center">
