--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -46,12 +46,14 @@
 
 
     function Send() {
+        $("#btnSendEmails").addClass("ui-disabled");
         $.ajax({
             url: "/management/send_session_emails/" + SessionID,
             success: function () {
-                alert("Notifications Sent");
+                
             }
         });
+        alert("Email Notifications Sending");
 
     }
 
