--- a/STSEval/management/templates/management/email_notice.html
+++ b/STSEval/management/templates/management/email_notice.html
@@ -32,7 +32,7 @@
 <hr>
 
 <div style='font-size:10px;margin-left:5%;'>
-<p>If you do not wish to participate in this competition, contact the Meet Host <a href='{{session.competition.admin.email}}'>{{session.competition.admin.email}}</a>.</p>
+<p>If you do not wish to participate in this competition, contact the Meet Host {{session.competition.admin.first_name}} {{session.competition.admin.last_name}}<a href='{{session.competition.admin.email}}'>{{session.competition.admin.email}}</a>.</p>
 
 <p>In order {{assigned}} this competition, the following requirements must be met:</p><ul>
     {% for req in reqs %}
